force-app/main/default/objects/Fleet_Turn__e/Fleet_Turn__e.object-meta.xml
<CustomObject>
    <description>One event per agent turn. Owned by Fleet alone; only Fleet's trigger subscribes. Published after commit.</description>
    <label>Fleet Turn</label>
    <pluralLabel>Fleet Turns</pluralLabel>
</CustomObject>