force-app/main/default/objects/Fleet_Turn__e/fields/Actions_Invoked__c.field-meta.xml
<CustomField>
    <fullName>Actions_Invoked__c</fullName>
    <description>JSON array of actions the agent invoked during this turn.</description>
    <label>Actions Invoked</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>