force-app/main/default/objects/Fleet_Turn__e/fields/Agent_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_API_Name__c</fullName>
    <description>API name of the agent that produced this turn.</description>
    <label>Agent API Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>