force-app/main/default/objects/Fleet_Turn__e/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <description>Flex Credits consumed by this turn.</description>
    <label>Credits</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>