force-app/main/default/objects/Fleet_Turn__e/fields/Grounding_Sources__c.field-meta.xml
<CustomField>
    <fullName>Grounding_Sources__c</fullName>
    <description>JSON array of knowledge sources cited in the response.</description>
    <label>Grounding Sources</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>