force-app/main/default/objects/Fleet_Turn__e/fields/Latency_Ms__c.field-meta.xml
<CustomField>
    <fullName>Latency_Ms__c</fullName>
    <description>End-to-end turn latency in milliseconds.</description>
    <label>Latency (ms)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>