force-app/main/default/objects/Fleet_Turn__e/fields/Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Occurred_At__c</fullName>
    <description>When the turn occurred.</description>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>