force-app/main/default/objects/Fleet_Turn__e/fields/Prompt_Versions__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Versions__c</fullName>
    <description>Prompt template versions in effect for this turn.</description>
    <label>Prompt Versions</label>
    <type>Text</type>
    <length>255</length>
</CustomField>