force-app/main/default/objects/Fleet_Turn__e/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Captured agent response for this turn.</description>
    <label>Response</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>