force-app/main/default/objects/Fleet_Turn__e/fields/Session_Key__c.field-meta.xml
<CustomField>
    <fullName>Session_Key__c</fullName>
    <description>Conversation session this turn belongs to.</description>
    <label>Session Key</label>
    <type>Text</type>
    <length>60</length>
</CustomField>