force-app/main/default/objects/Fleet_Turn__e/fields/Topic_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Topic_Confidence__c</fullName>
    <description>Router confidence for the selected topic, 0.0 to 1.0.</description>
    <label>Topic Confidence</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>