force-app/main/default/objects/Fleet_Turn__e/fields/Trace_Key__c.field-meta.xml
<CustomField>
    <fullName>Trace_Key__c</fullName>
    <description>Uniqueness key that maps this event to its Fleet_Trace__b row.</description>
    <label>Trace Key</label>
    <type>Text</type>
    <length>60</length>
</CustomField>