force-app/main/default/objects/Fleet_Turn__e/fields/Trust_Flags__c.field-meta.xml
<CustomField>
    <fullName>Trust_Flags__c</fullName>
    <description>JSON of trust and safety flags raised on this turn.</description>
    <label>Trust Flags</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>