force-app/main/default/objects/Fleet_Turn__e/fields/Utterance__c.field-meta.xml
<CustomField>
    <fullName>Utterance__c</fullName>
    <description>Captured end-user utterance for this turn.</description>
    <label>Utterance</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>